--- a/app/src/main/res/layout/insert_newapartment.xml
+++ b/app/src/main/res/layout/insert_newapartment.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
     android:orientation="vertical"
     android:weightSum="100"
     >
