--- a/app/src/main/res/layout/manage_myapartments.xml
+++ b/app/src/main/res/layout/manage_myapartments.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_above="@+id/navigation" >
 
-    <FrameLayout
-        android:id="@+id/gridContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -21,12 +17,15 @@
             android:divider="#000"
             android:dividerHeight="2dp"
             android:listSelector="#d1ed97"/>
-    </android.support.v7.widget.CardView>
+         </android.support.v7.widget.CardView>
 
-
-    </FrameLayout>
-
-
-</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_input_add" />
+</FrameLayout>
 
 
