--- a/app/src/main/res/layout/manage_myrooms.xml
+++ b/app/src/main/res/layout/manage_myrooms.xml
@@ -13,7 +13,15 @@
                 android:divider="#000"
                 android:dividerHeight="2dp"
                 android:listSelector="#d1ed97"/>
-        </FrameLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_input_add" />
+</FrameLayout>
 
 
 
